package at.htl;

public class Upvote {
}
