package at.htl;

public class Vote {
    Survey survey;
    User user;
}
